# crypto-analytics-platform

./: .pre-commit-config.yaml  LICENSE  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
infra/alembic/: env.py
infra/alembic/versions/: 124392f5e104_create_exchanges_and_trading_pairs.py  2b964ff1856b_add_indexes_to_trading_pairs.py
src/crypto_analytics/: __init__.py
src/crypto_analytics/core/: config.py  database.py  models.py
src/crypto_analytics/ingestion/: binance_client.py  clickhouse_client.py  pipeline.py  repository.py  seed.py
tests/unit/: test_binance_client.py
